--- a/src/main/resources/templates/order/createOrderForm.html
+++ b/src/main/resources/templates/order/createOrderForm.html
@@ -1,6 +1,28 @@
 <html layout:decorate="~{layout}" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="container mb-5" layout:fragment="content">
-    <h2 class="py-4">제품 생산</h2>
-
+    <div class="row">
+        <div class="col-md-2"></div>
+        <form role="form" th:object="${orderForm}" method="post" class="py-2 col-md-8">
+            <h2 class="py-4">제품 생산</h2>
+            <div class="alert alert-danger" role="alert" th:if="${#fields.hasErrors()}">
+                <div th:each="err : ${#fields.allErrors()}" th:text="${err}"></div>
+            </div>
+            <div class="mb-2">
+                <label class="form-label fw-bold">제품</label>
+                <select th:field="*{productName}" class="form-control">
+<!--                    <option value="">생산할 제품을 선택하세요</option>-->
+                    <option th:each="productName:${T(com.example.refoam.domain.ProductName).values()}" th:value="${productName}" th:text="${productName}"></option>
+                </select>
+            </div>
+            <div class="mb-2">
+                <label class="form-label fw-bold" th:for="*{orderQuantity}">수량</label>
+                <input class="form-control" th:field="*{orderQuantity}">
+            </div>
+            <div class="text-end">
+                <button type="submit" class="btn btn-primary btn-sm">생산 등록</button>
+            </div>
+        </form>
+        <div class="col-md-2"></div>
+    </div>
 </div>
 </html>
